feat: 費用模組功能增強 - 新增狀態管理、頻率限制與進階搜尋
主要變更：
- 新增支出狀態管理（ExpenseStatus: ACTIVE/VOIDED）
- 新增費用頻率限制功能（ExpenseFrequency: DAILY/WEEKLY/BIWEEKLY/MONTHLY/UNLIMITED）
- 實作進階搜尋功能，支援多條件組合查詢
- 改善 API 回應結構，新增 ResponseDto
- 增強員工服務搜尋功能
- 新增規格說明類（Specifications）用於複雜查詢
- 新增使用指南與設計檢查報告文檔

新增檔案：
- ExpenseStatus.java - 支出狀態枚舉
- ExpenseFrequency.java - 費用頻率類型枚舉
- ExpenseCategoryResponseDto.java - 費用類別回應 DTO
- ExpenseSearchRequest.java - 支出搜尋請求 DTO
- ExpenseCategorySearchRequest.java - 費用類別搜尋請求 DTO
- EmployeeSearchRequest.java - 員工搜尋請求 DTO
- ExpenseSpecifications.java - 支出查詢規格類
- ExpenseCategorySpecifications.java - 費用類別查詢規格類
- docs/前端費用模組使用指南.md
- docs/費用模組員工薪資設計檢查報告.md

修改檔案：
- ExpenseServiceImpl.java - 新增狀態管理與頻率限制邏輯
- ExpenseCategoryServiceImpl.java - 支援頻率類型設定
- EmployeeServiceImpl.java - 改善搜尋功能
- 各 Repository 層 - 新增規格查詢支援
- 各 Controller 層 - 新增搜尋 API 端點
- Expense/ExpenseCategory 實體 - 新增狀態與頻率欄位
- ApiResponseDto - 改善回應結構